# llm-viz

./: .gitignore  README.md  pyproject.toml
attention-maps/: README.md  visualizing-attn-with-gpt2.ipynb  visualizing-attn-with-mixtral.ipynb
conv/: run.sh  train.py
experts/: DEMO_README.md  experts-hook.ipynb  experts-percentages.ipynb
perplexity/: humaneval.ipynb  mathqa.ipynb  profiling.ipynb  wikitext.ipynb
writeup/: writeup.md
