[tool.poetry]
name = "llm-viz"
version = "0.1.0"
description = ""
authors = ["Keane Moraes <lordvader3002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
altair = "^5.3.0"
pandas = "^2.2.2"
transformers = "^4.41.2"
datasets = "^2.19.2"
hf-transfer = "^0.1.6"
boto3 = "^1.34.122"
tensorboardx = "^2.6.2.2"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
ipywidgets = "^8.1.3"
mlx-lm = "^0.14.3"
bitsandbytes = "0.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
